updated script src link

--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rock Paper Scissors</title>
     <meta charset="utf-8">
-    <script src="rockPapaerScissorsGame.js"></script>
+    <script src="rockPS.js"></script>
   </head>
   <body>
     <p>Play Rock, Paper, Scissors through the browser console!</p>
