added player buttons and area to show computers selection

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <script src="rockPS.js"></script>
   </head>
   <body>
-    <p>Play Rock, Paper, Scissors through the browser console!</p>
+    <div class="selection-container">
+      <h1>Are you destined to wear the crown?</h1>
+      <h2>Make your selection...</h2>
+      <div class="buttons">
+        <button class="btn">Rock</button>
+        <button class="btn">Paper</button>
+        <button class="btn">Scissors</button>
+      </div>
+      <p>VS</p>
+      <div class="computer-choice">(compChoice)</div>
+    </div>
+    <div
+
+
   </body>
 </html>
