added score board elements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       <p>VS</p>
       <div class="computer-choice">(compChoice)</div>
     </div>
-    <div
+    <div class="score-container">
+      <div class="player-icon"></div>
+      <!-- scores should go here (green, crown, red circles)-->
+      <div class="robot-icon"></div>
+
+    </div>
 
 
   </body>
