--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Rock Paper Scissors</title>
     <meta charset="utf-8">
     <script src="rockPS.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="selection-container">
@@ -18,12 +19,11 @@
       <div class="computer-choice">(compChoice)</div>
     </div>
     <div class="score-container">
+      <p>temp</p>
       <div class="player-icon"></div>
       <!-- scores should go here (green, crown, red circles)-->
       <div class="robot-icon"></div>
-
     </div>
-
-
   </body>
+  <footer></footer>
 </html>
