added match and scoreboard sections

--- a/index.html
+++ b/index.html
@@ -3,27 +3,14 @@
   <head>
     <title>Rock Paper Scissors</title>
     <meta charset="utf-8">
-    <script src="rockPS.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="selection-container">
-      <h1>Are you destined to wear the crown?</h1>
-      <h2>Make your selection...</h2>
-      <div class="buttons">
-        <button class="btn">Rock</button>
-        <button class="btn">Paper</button>
-        <button class="btn">Scissors</button>
-      </div>
-      <p>VS</p>
-      <div class="computer-choice">(compChoice)</div>
+    <div class="match">
+      <h1>Are you destined to wear the crown?</h1></p>
     </div>
-    <div class="score-container">
-      <p>temp</p>
-      <div class="player-icon"></div>
-      <!-- scores should go here (green, crown, red circles)-->
-      <div class="robot-icon"></div>
+    <div class="score-board">
+
     </div>
   </body>
-  <footer></footer>
 </html>
