added background colors to section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="match">
       <h1>Are you destined to wear the crown?</h1></p>
     </div>
-    <div class="score-board">
+    <div class="score-board">score
 
     </div>
   </body>
