--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   </head>
   <body>
     <div class="match">
-      <h1>Are you destined to wear the crown?</h1></p>
+      <h1>Are you destined to wear the crown?</h1>
+      <h2>Make your selection...</h2>
+      <div class="selections">
+        <div class="buttons">
+          <button class="btn">ROCK</button>
+          <button class="btn paper">PAPER</button>
+          <button class="btn">SCISSORS</button>
+        </div>
+        <p>VS</p>
+        <div class="computer-choice"></div>
+      </div>
     </div>
     <div class="score-board">score
 
