added sizing to selection boxes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <button class="btn paper">PAPER</button>
           <button class="btn">SCISSORS</button>
         </div>
-        <p>VS</p>
+        <p class="versus">VS</p>
         <div class="computer-choice"></div>
       </div>
     </div>
