added RPS images and fixed button backgrounds

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h2>Make your selection...</h2>
       <div class="selections">
         <div class="buttons">
-          <button class="btn">ROCK</button>
-          <button class="btn paper">PAPER</button>
-          <button class="btn">SCISSORS</button>
+          <button class="btn"><img src="images/rock.png" alt="Rock Image">ROCK</button>
+          <button class="btn paper"><img src="images/stickyNote.png" alt="Paper Image">PAPER</button>
+          <button class="btn"><img src="images/scissors.png" alt="scissors">SCISSORS</button>
         </div>
         <p class="versus">VS</p>
         <div class="computer-choice"></div>
