added scoreboard icons and point divs

--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
       <h2>Make your selection...</h2>
       <div class="selections">
         <div class="buttons">
-          <button class="btn"><img src="images/rock.png" alt="Rock Image">ROCK</button>
-          <button class="btn paper"><img src="images/stickyNote.png" alt="Paper Image">PAPER</button>
-          <button class="btn"><img src="images/scissors.png" alt="scissors">SCISSORS</button>
+          <button class="btn"><img src="images/rock.png" alt="Rock Image"></button>
+          <button class="btn paper"><img src="images/stickyNote.png" alt="Paper Image"></button>
+          <button class="btn"><img src="images/scissors.png" alt="scissors"></button>
         </div>
         <p class="versus">VS</p>
         <div class="computer-choice"></div>
       </div>
     </div>
-    <div class="score-board">score
+    <div class="score-board">
+      <div class="user-icon"></div>
+      <div class="points">
+        <div class="point oneU"></div>
+        <div class="point twoU"></div>
+        <div class="point threeU"></div>
+        <div class="point fourU"></div>
+        <div class='point winner'></div>
+        <div class="point oneR"></div>
+        <div class="point twoR"></div>
+        <div class="point threeR"></div>
+        <div class="point fourR"></div>
+      </div>
+      <div class="robot-icon"></div>
+
+      score
 
     </div>
   </body>
