fixed font size for crown

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Rock Paper Scissors</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/3e35c12d7b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="match">
@@ -20,21 +21,19 @@
       </div>
     </div>
     <div class="score-board">
-      <div class="user-icon"></div>
+      <div class="icon user"><i class="fa-solid fa-user"></i></div>
       <div class="points">
         <div class="point oneU"></div>
         <div class="point twoU"></div>
         <div class="point threeU"></div>
         <div class="point fourU"></div>
-        <div class='point winner'></div>
+        <i class="winner fa-solid fa-crown"></i>
         <div class="point oneR"></div>
         <div class="point twoR"></div>
         <div class="point threeR"></div>
         <div class="point fourR"></div>
       </div>
-      <div class="robot-icon"></div>
-
-      score
+      <div class="icon robot"><i class="fa-solid fa-robot"></i></div>
 
     </div>
   </body>
