--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Rock Paper Scissors</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/3e35c12d7b.js" crossorigin="anonymous"></script>
   </head>
@@ -21,7 +22,7 @@
       </div>
     </div>
     <div class="score-board">
-      <div class="icon user"><i class="fa-solid fa-user"></i></div>
+      <i class="icon user fa-solid fa-user"></i>
       <div class="points">
         <div class="point oneU"></div>
         <div class="point twoU"></div>
@@ -33,8 +34,8 @@
         <div class="point threeR"></div>
         <div class="point fourR"></div>
       </div>
-      <div class="icon robot"><i class="fa-solid fa-robot"></i></div>
-
+      <i class="icon robot fa-solid fa-robot"></i>
     </div>
   </body>
+  <footer>Created by Samantha Iraheta</footer>
 </html>
