separated user and robot points into two divs; changed main page divs into sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/3e35c12d7b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="match">
+    <section class="match">
       <h1>Are you destined to wear the crown?</h1>
       <h2>Make your selection...</h2>
       <div class="selections">
@@ -21,22 +21,24 @@
         <p class="versus">VS</p>
         <div class="computer-choice"></div>
       </div>
-    </div>
-    <div class="score-board">
+    </section>
+    <section class="score-board">
       <i class="icon user fa-solid fa-user"></i>
-      <div class="points">
-        <div class="point oneU"></div>
-        <div class="point twoU"></div>
-        <div class="point threeU"></div>
-        <div class="point fourU"></div>
-        <i class="winner fa-solid fa-crown"></i>
-        <div class="point oneR"></div>
-        <div class="point twoR"></div>
-        <div class="point threeR"></div>
-        <div class="point fourR"></div>
+      <div class="userPoints">
+        <div class="point one"></div>
+        <div class="point two"></div>
+        <div class="point three"></div>
+        <div class="point four"></div>
+      </div>
+      <i class="winner fa-solid fa-crown"></i>
+      <div class = robotPoints>
+        <div class="point four"></div>
+        <div class="point three"></div>
+        <div class="point two"></div>
+        <div class="point one"></div>
       </div>
       <i class="icon robot fa-solid fa-robot"></i>
-    </div>
+    </section>
   </body>
   <footer>Created by Samantha Iraheta</footer>
 </html>
