changed background colors of sections across page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://kit.fontawesome.com/3e35c12d7b.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <header>
+      <p>Rock, Paper, Scissors</p>
+    </header>
     <section class="match">
       <h1>Are you destined to wear the crown?</h1>
       <h2>Make your selection...</h2>
