added ids to button selections and event listener

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <h2>Make your selection...</h2>
       <div class="selections">
         <div class="buttons">
-          <button class="btn"><img src="images/rock.png" alt="Rock Image"></button>
-          <button class="btn paper"><img src="images/stickyNote.png" alt="Paper Image"></button>
-          <button class="btn"><img src="images/scissors.png" alt="scissors"></button>
+          <button id="1" class="btn"><img src="images/rock.png" alt="Rock Image"></button>
+          <button id="2" class="btn paper"><img src="images/stickyNote.png" alt="Paper Image"></button>
+          <button id="3" class="btn"><img src="images/scissors.png" alt="scissors"></button>
         </div>
         <p class="versus">VS</p>
         <div class="computer-choice"></div>
       </div>
     </section>
-    <section class="score-board">
+    <section class="scoreBoard">
       <i class="icon user fa-solid fa-user"></i>
       <div class="userPoints">
         <div class="point one"></div>
