--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <script src="https://kit.fontawesome.com/3e35c12d7b.js" crossorigin="anonymous"></script>
+    <script src="rockPS.js" defer></script>
   </head>
   <body>
     <header>
