removed btn classes from buttons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <h2>Make your selection...</h2>
       <div class="selections">
         <div class="buttons">
-          <button id="1" class="btn"><img src="images/rock.png" alt="Rock Image"></button>
-          <button id="2" class="btn paper"><img src="images/stickyNote.png" alt="Paper Image"></button>
-          <button id="3" class="btn"><img src="images/scissors.png" alt="scissors"></button>
+          <button id="1"><img src="images/rock.png" alt="Rock Image"></button>
+          <button id="2" class="paper"><img src="images/stickyNote.png" alt="Paper Image"></button>
+          <button id="3"><img src="images/scissors.png" alt="scissors"></button>
         </div>
         <p class="versus">VS</p>
         <div class="computer-choice"></div>
