--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     <section class="scoreBoard">
       <i class="icon user fa-solid fa-user"></i>
       <div class="userPoints">
-        <div class="point one"></div>
-        <div class="point two"></div>
-        <div class="point three"></div>
-        <div class="point four"></div>
+        <div class="point p1"></div>
+        <div class="point p2"></div>
+        <div class="point p3"></div>
+        <div class="point p4"></div>
       </div>
       <i class="winner fa-solid fa-crown"></i>
       <div class = robotPoints>
-        <div class="point four"></div>
-        <div class="point three"></div>
-        <div class="point two"></div>
-        <div class="point one"></div>
+        <div class="point p4"></div>
+        <div class="point p3"></div>
+        <div class="point p2"></div>
+        <div class="point p1"></div>
       </div>
       <i class="icon robot fa-solid fa-robot"></i>
     </section>
