utilized sweet alerts library and added option to play again for end of game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <script src="https://kit.fontawesome.com/3e35c12d7b.js" crossorigin="anonymous"></script>
     <script src="rockPS.js" defer></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body>
     <header>
