added extra text to h2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>Rock, Paper, Scissors</p>
     </header>
     <section class="match">
-      <h1>Are you destined to wear the crown?</h1>
+      <h1>Are you destined to wear the crown? First to five wins.</h1>
       <h2>Make your selection...</h2>
       <div class="selections">
         <div class="buttons">
